--- a/101/BasicsShapeSize.ipynb
+++ b/101/BasicsShapeSize.ipynb
@@ -32,11 +32,11 @@
     "## Accessing the Example Dataset\n",
     "\n",
     "In this notebook, we will use the monthly PRISM v2 dataset as an example for understanding the effects of chunk shape and size.\n",
-    "Let's go ahead and read in the file using `xarray`.\n",
-    "To do this, we will use [`fsspec`](https://filesystem-spec.readthedocs.io/en/latest/) to get a mapper to the `zarr` file the HyTEST OSN.\n",
+    "Let's go ahead and read in the file using xarray.\n",
+    "To do this, we will use [fsspec](https://filesystem-spec.readthedocs.io/en/latest/) to get a mapper to the Zarr file the HyTEST OSN.\n",
     "\n",
     "```{note}\n",
-    "The `xarray` loader is \"lazy\", meaning it will read just enough of the data to make decisions about its shape, structure, etc.\n",
+    "The xarray loader is \"lazy\", meaning it will read just enough of the data to make decisions about its shape, structure, etc.\n",
     "It will pretend like the whole dataset is in memory (and we can treat it that way), but it will only load data as required.\n",
     "```"
    ]
@@ -177,7 +177,7 @@
     "Having `9.06` longitude chunks means we will have 10 chunks in practice, but that last one is not full-sized.\n",
     "In this case, this means that the last chunk in the given dimension will be extremely thin. \n",
     "\n",
-    "In the case of the latitude chunks, the extra `0.006` of a chunk means that the last, fractional chunk is only one `lat` observation.\n",
+    "In the case of the latitude chunks, the extra `0.006` of a chunk means that the last, fractional chunk (or [\"**partial chunk**\"](../back/Glossary.md#term-Partial-Chunk)) is only one `lat` observation.\n",
     "(This occurred as `//` is floor division and `lat` does not have a number of elements divisible by 4.)\n",
     "This all but guarantees that two chunks are needed for a small spatial extent near the \"end\" of the `lat` dimension.\n",
     "\n",
@@ -302,10 +302,10 @@
     "Here are some constraints: \n",
     "\n",
     "* Files Too Big:\n",
-    "  In a `zarr` dataset, each chunk is stored as a separate binary file.\n",
+    "  In a Zarr dataset, each chunk is stored as a separate binary file.\n",
     "  If we need data from a particular chunk, no matter how little or how much, that file gets opened, decompressed, and the whole thing read into memory.\n",
     "  A large chunk size means that there may be a lot of data transferred in situations when only a small subset of that chunk's data is actually needed.\n",
-    "  It also means there might not be enough chunks to allow the `dask` workers to stay busy loading data in parallel.\n",
+    "  It also means there might not be enough chunks to allow the dask workers to stay busy loading data in parallel.\n",
     "\n",
     "* Files Too Small:\n",
     "  If the chunk size is too small, the time it takes to read and decompress the data for each chunk can become comparable to the latency of S3 (typically 10-100ms).\n",
@@ -399,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
