--- a/101/ExamineDataChunking.ipynb
+++ b/101/ExamineDataChunking.ipynb
@@ -32,9 +32,9 @@
    "source": [
     "## Accessing the Dataset\n",
     "\n",
-    "Before we can open at the dataset, we must first get a mapper that will easily allow for `xarray` to open the dataset.\n",
-    "To do this, we will use [`fsspec`](https://filesystem-spec.readthedocs.io/en/latest/) to perform an anonymous read from an endpoints outside of S3, using the S3 API (i.e., the HyTEST OSN).\n",
-    "This requires us to set up an S3 file system and feed it the endpoint url.\n",
+    "Before we can open at the dataset, we must first get a mapper that will easily allow for [xarray](https://docs.xarray.dev/en/stable/index.html) to open the dataset.\n",
+    "To do this, we will use [fsspec](https://filesystem-spec.readthedocs.io/en/latest/) to perform an anonymous read from an endpoints outside of S3, using the S3 API (i.e., the HyTEST OSN).\n",
+    "This requires us to set up an S3 file system and feed it the endpoint URL.\n",
     "We can then point the the file system to our dataset (in this case the PRISM V2 Zarr store) and get a mapper to the file."
    ]
   },
@@ -59,7 +59,7 @@
     "Now that we have our file mapper, we can open the dataset using [`xarray.open_dataset()`](https://docs.xarray.dev/en/stable/generated/xarray.open_dataset.html) with `zarr` specified as our engine.\n",
     "\n",
     "```{note}\n",
-    "The `xarray` loader is \"lazy\", meaning it will read just enough of the data to make decisions about its shape, structure, etc.\n",
+    "The xarray loader is \"lazy\", meaning it will read just enough of the data to make decisions about its shape, structure, etc.\n",
     "It will pretend like the whole dataset is in memory (and we can treat it that way), but it will only load data as required.\n",
     "```"
    ]
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The \"rich\" HTML output to show the `xarray.Dataset` includes a lot of information, some of which is hidden behind toggles.\n",
+    "The \"rich\" HTML output to show the [`xarray.Dataset`](https://docs.xarray.dev/en/stable/generated/xarray.Dataset.html) includes a lot of information, some of which is hidden behind toggles.\n",
     "Click on the icons to the right to expand and see all the metadata available for the dataset.\n",
     "The page icon will display attributes attached to the data, while the database icon will display information about the dataset.\n",
     "\n",
@@ -93,7 +93,7 @@
     "  In this dataset, a coordinate can be used to pick out a particular cell of the array.\n",
     "  Asking for cells where say `lat=49.9` is possible because these coordinates map the meaningful values of latitude to the behind-the-scenes cell index needed to fetch the value. \n",
     "- **Data Variables**: The variables are `tmx`, `ppt`, and `tmn`, which are associated with three indices by which data values are located in space and time (the \"Dimensions\"). \n",
-    "- **Indexes**: This is an internal data structure to help `xarray` quickly find items in the array.\n",
+    "- **Indexes**: This is an internal data structure to help xarray quickly find items in the array.\n",
     "- **Attributes**: Arbitrary metadata that has been given to the dataset. \n",
     "\n",
     "Let's look at one of the data variables to learn more about it. "
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variable = `xarray.DataArray`\n",
+    "### Variable = [`xarray.DataArray`](https://docs.xarray.dev/en/stable/generated/xarray.DataArray.html#xarray.DataArray)\n",
     "\n",
     "Each data variable is its own N-dimensional array (in this case, 3-dimensional, indexed by `lat`, `lon`, and `time`).\n",
     "We can look at the individual variables by examining its array separately from the dataset: "
@@ -154,7 +154,7 @@
     "Therefore, we need to directly access the data in a way that returns the true chunk shape of the stored dataset.\n",
     "\n",
     "To do this, we can simply check the variables \"encoding\".\n",
-    "This returns metadata that was used by `xarray` when reading the data."
+    "This returns metadata that was used by xarray when reading the data."
    ]
   },
   {
@@ -184,10 +184,10 @@
     "## Getting the Chunking When Reading Data\n",
     "\n",
     "While checking the \"encoding\" of the variable can tell you what the dataset's stored chunk shape is, it is typically easier to do this in one step when you open the dataset.\n",
-    "To do this, all we need is to add a another keyword when we open the dataset with `xarray`: `chunks={}`.\n",
+    "To do this, all we need is to add a another keyword when we open the dataset with xarray: `chunks={}`.\n",
     "As per the [`xarray.open_dataset` documentation](https://docs.xarray.dev/en/stable/generated/xarray.open_dataset.html): \n",
     "\n",
-    "> `chunks={}` loads the data with `dask` using the engine’s preferred chunk size, generally identical to the format’s chunk size.\n",
+    "> `chunks={}` loads the data with dask using the engine’s preferred chunk size, generally identical to the format’s chunk size.\n",
     "\n",
     "In other words, using `chunks={}` will load the data with chunk shape equal to `'preferred_chunks'`.\n",
     "Let's check this out and see how our data looks when we include this keyword when opening."
@@ -237,12 +237,12 @@
     "## Changing the Chunk Shape and Size\n",
     "\n",
     "Now that we know our stored chunk shape and size or how to find them, they may not always be the optimal choice for performing analysis.\n",
-    "For example, [`zarr` recommends a stored chunk size of at least 1 MB uncompressed](https://zarr.readthedocs.io/en/stable/tutorial.html#chunk-size-and-shape) as they give better performance.\n",
-    "However, [`dask` recommends chunk sizes between 10 MB and 1 GB for computations](https://docs.dask.org/en/stable/array-chunks.html#specifying-chunk-shapes), depending on the availability of RAM and the duration of computations.\n",
+    "For example, [Zarr recommends a stored chunk size of at least 1 MB uncompressed](https://zarr.readthedocs.io/en/stable/tutorial.html#chunk-size-and-shape) as they give better performance.\n",
+    "However, [dask recommends chunk sizes between 10 MB and 1 GB for computations](https://docs.dask.org/en/stable/array-chunks.html#specifying-chunk-shapes), depending on the availability of RAM and the duration of computations.\n",
     "Therefore, our stored chunk size may not be large enough for optimal computations.\n",
     "Thankfully, stored chunks do not need to be the same size as those we use for our computations.\n",
     "In other words, we can group multiple smaller stored chunks together when performing our computations.\n",
-    "`xarray` makes this easy by allowing us to adjust the chunk shape and size, either as we load the data or after.\n",
+    "Xarray makes this easy by allowing us to adjust the chunk shape and size, either as we load the data or after.\n",
     "\n",
     "Let's show how this works by increasing our chunks of the minimum monthly temperature to a size of ~500 MiB.\n",
     "To do so when reading in the data, all we need to do is actually specify the chunk shape to `chunks`.\n",
