--- a/101/Rechunking.ipynb
+++ b/101/Rechunking.ipynb
@@ -28,11 +28,11 @@
     "The goal of this notebook is to learn how to \"[**rechunk**](../back/Glossary.md#term-Rechunking)\" data.\n",
     "This will be a culmination of all the [previous introductory material](index.md) where we will:\n",
     "\n",
-    "1. [Read in a `zarr` store](ExamineDataChunking.ipynb)\n",
+    "1. [Read in a Zarr store](ExamineDataChunking.ipynb)\n",
     "2. [Check the current chunking](ExamineDataChunking.ipynb)\n",
     "3. [Choose a new chunk shape](BasicsShapeSize.ipynb)\n",
-    "4. Rechunk using [`Rechunker`](https://rechunker.readthedocs.io/en/latest/index.html)\n",
-    "5. [Confirm the proper creation of the `zarr` store by `Rechunker`](WriteChunkedFiles.ipynb)"
+    "4. Rechunk using [Rechunker](https://rechunker.readthedocs.io/en/latest/index.html)\n",
+    "5. [Confirm the proper creation of the Zarr store by Rechunker](WriteChunkedFiles.ipynb)"
    ]
   },
   {
@@ -61,7 +61,7 @@
     "For the dataset in this tutorial, we will use the data from the National Water Model Reanalysis Version 2.1.\n",
     "The full dataset is part of the [AWS Open Data Program](https://aws.amazon.com/opendata/), available via the S3 bucket at: `s3://noaa-nwm-retro-v2-zarr-pds/`.\n",
     "\n",
-    "As this is a `zarr` store, we can easily read it in directly with [`xarray.open_dataset()`](https://docs.xarray.dev/en/stable/generated/xarray.open_dataset.html), including the keyword `chunks={}` to make sure it loads the data with `dask` using the stored chunks' shape and size."
+    "As this is a Zarr store, we can easily read it in directly with [`xarray.open_dataset()`](https://docs.xarray.dev/en/stable/generated/xarray.open_dataset.html), including the keyword `chunks={}` to make sure it loads the data with dask using the stored chunks' shape and size."
    ]
   },
   {
@@ -211,7 +211,7 @@
    "id": "3234b824-aa75-402f-9976-0b9d9f90e821",
    "metadata": {},
    "source": [
-    "## Rechunk with `Rechunker`\n",
+    "## Rechunk with [Rechunker](https://rechunker.readthedocs.io/en/latest/index.html)\n",
     "\n",
     "This is a relatively trivial example, due to the smaller size of the subset of the dataset.\n",
     "As the whole subset can fit into memory easily, chunking in general is largely unnecesary in terms of optimizing I/O (however, parallelism is still a consideration). \n",
@@ -246,9 +246,9 @@
    "id": "bfbdfce8-992d-4412-ad19-cdad10dc379c",
    "metadata": {},
    "source": [
-    "With this plan, we can ask [`rechunker`](https://rechunker.readthedocs.io/en/latest/index.html) to re-write the data using the prescribed chunking pattern.\n",
-    "`Rechunker` will take the currently read in data and rechunk it using an intermediate `zarr` store for efficiency.\n",
-    "The result will be our rechunked data saved to a new `zarr` store."
+    "With this plan, we can ask [Rechunker](https://rechunker.readthedocs.io/en/latest/index.html) to re-write the data using the prescribed chunking pattern.\n",
+    "Rechunker will take the currently read in data and rechunk it using an intermediate Zarr store for efficiency.\n",
+    "The result will be our rechunked data saved to a new Zarr store."
    ]
   },
   {
@@ -278,18 +278,18 @@
     "Oh, that is not what we wanted!\n",
     "We seem to have gotten an error indicating overlap in chunks between the read and write.\n",
     "Looking at the error, it is saying that the first `time` chunk we are reading is a partial chunk and not a full chunk.\n",
-    "So, when `Rechunker` tries to read the data and then write the first rechunk, it is having to read two chunks to write to the one chunk.\n",
-    "This is a one-to-many write, which can corrupt our file when done in parallel with `dask`.\n",
-    "Thank goodness `Rechunker` caught this for us!\n",
+    "So, when Rechunker tries to read the data and then write the first rechunk, it is having to read two chunks to write to the one chunk.\n",
+    "This is a one-to-many write, which can corrupt our file when done in parallel with dask.\n",
+    "Thank goodness Rechunker caught this for us!\n",
     "Reading the recommended fix, it seems the only way to go about this is to call `chunk()` and reset the chunking on the original data.\n",
     "In other words, after we select the subset from the dataset, we need to realign the chunks such that the first chunk is not a partial chunk.\n",
     "This is simple enough to do.\n",
-    "So much so, we can just do it when passing the dataset subset to `Rechunker`.\n",
+    "So much so, we can just do it when passing the dataset subset to Rechunker.\n",
     "\n",
     "```{note}\n",
     "`rechunker.rechunk` does not overwrite any data.\n",
     "If it sees that `rechunked_nwm.zarr` or `/tmp/scratch.zarr` already exist, it will raise an exception.\n",
-    "Be sure that these locations do not exist before calling `Rechunker`. \n",
+    "Be sure that these locations do not exist before calling Rechunker. \n",
     "```"
    ]
   },
@@ -322,11 +322,11 @@
     "Alright, that worked with no problems!\n",
     "Now, we must specifically direct rechunk to calculate.\n",
     "To do this, we can call `execute()` on our `result` `Rechunked` object.\n",
-    "Without the call to `execute()`, the `zarr` dataset will be empty, and `result` will only hold a 'task graph' outlining the calculation steps.\n",
+    "Without the call to `execute()`, the Zarr dataset will be empty, and `result` will only hold a 'task graph' outlining the calculation steps.\n",
     "\n",
     "```{tip}\n",
-    "The `rechunker` also writes a minimalist data group, meaning that variable metadata is not consolidated.\n",
-    "This is not a required step, but it will really spead up future workflows when the data is read back in using `xarray`.\n",
+    "Rechunker also writes a minimalist data group, meaning that variable metadata is not consolidated.\n",
+    "This is not a required step, but it will really spead up future workflows when the data is read back in using xarray.\n",
     "```"
    ]
   },
@@ -393,14 +393,14 @@
    "source": [
     "Perfect!\n",
     "The maximum absolute difference between each both the `streamflow` and `velocity` variables is 0.\n",
-    "In other words, they are exactly the same, and `Rechunker` worked as expect.\n",
+    "In other words, they are exactly the same, and Rechunker worked as expect.\n",
     "\n",
-    "Now that you know how to rechunk a `zarr` store using `Rechunker`, you should know all of the basics there are in terms of chunking.\n",
+    "Now that you know how to rechunk a Zarr store using Rechunker, you should know all of the basics there are in terms of chunking.\n",
     "You are now ready to explore more [advanced chunking topics in chunking](../201/index.md) if you are interested!\n",
     "\n",
     "## Clean Up\n",
     "\n",
-    "As we don't want to keep this rechunked `zarr` on our local machine, let's go ahead and delete it."
+    "As we don't want to keep this rechunked Zarr on our local machine, let's go ahead and delete it."
    ]
   },
   {
