--- a/101/WhyChunk.ipynb
+++ b/101/WhyChunk.ipynb
@@ -127,7 +127,7 @@
     "For this analysis, you can easily see why this would be slow due to the massive amount of I/O and be better if the array could instead be chunked in column-major order.\n",
     "Just to make this clear, if your data was now chunked by columns, all you would have to do is read the $i^{th}$ column into memory, and you would be good to go.\n",
     "Meaning you would just need a single read from disk versus reading however many rows your data has.\n",
-    "While handling chunks may seem like it would become complicated, array-handling libraries (`numpy`, `xarray`, `pandas`, `dask`, and others) will handle all of the record-keeping to know which chunk holds what data within the dataset. "
+    "While handling chunks may seem like it would become complicated, array-handling libraries ([numpy](https://numpy.org/), [xarray](https://xarray.dev/), [pandas](https://pandas.pydata.org/), [dask](https://www.dask.org/), and others) will handle all of the record-keeping to know which chunk holds what data within the dataset. "
    ]
   },
   {
@@ -137,7 +137,7 @@
     "## Toy Example\n",
     "\n",
     "By now, we have hopefully answered both of the question about \"what is data chunking?\" and \"why should I care?\".\n",
-    "To really drive home the idea, let's apply the above theoretical example using [`dask`](https://docs.dask.org/en/stable/).\n",
+    "To really drive home the idea, let's apply the above theoretical example using [dask](https://docs.dask.org/en/stable/).\n",
     "In this case, we will generate a square array of ones to test how different \"[**chunk shapes**](../back/Glossary.md#term-Chunk-shape)\" compare."
    ]
   },
@@ -157,8 +157,8 @@
     "### Chunk by Rows\n",
     "\n",
     "First, let's start with the square array chunked by rows.\n",
-    "We'll do a 50,625x50,625 array as this is about 19 GiB, which is larger than the typical memory availablity of a laptop.\n",
-    "The nice thing about `dask` is that we can see how big our array and chunks are in the output. "
+    "We'll do a 50625x50625 array as this is about 19 GiB, which is larger than the typical memory availablity of a laptop.\n",
+    "The nice thing about dask is that we can see how big our array and chunks are in the output. "
    ]
   },
   {
@@ -232,8 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected, the time difference is massive.\n",
-    "In this case, it is about a factor of 200x faster when properly chunked (at least on my laptop)."
+    "As expected, the time difference is massive when properly chunked."
    ]
   },
   {
@@ -269,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, this is only 1.5x slower when accessing the first column.\n",
+    "As we can see, this is only slightly slower when accessing the first column compared to the column chunking.\n",
     "However, let's time how long it takes to access a single row."
    ]
   },
@@ -305,7 +304,7 @@
     "The primary pro, as we hopefully conveyed with our previous example, is that well chunked data substantially speeds up any analysis that favors that chunk shape.\n",
     "However, this becomes a con when you change your analysis to one that favors a new chunk shape.\n",
     "In other words, data that is well-organized to optimize one kind of analysis may not suit another kind of analysis on the same data.\n",
-    "While not a problem for our example here, changing the chunk shape (known as \"[**rechunking**](../back/Glossary.md#term-Rechunking)\" on an established dataset is time-consuming, and it produces a separate copy of the dataset, increasing storage requirements.\n",
+    "While not a problem for our example here, changing the chunk shape (known as \"[**rechunking**](../back/Glossary.md#term-Rechunking)\") on an established dataset is time-consuming, and it produces a separate copy of the dataset, increasing storage requirements.\n",
     "The space commitment can be substantial if a complex dataset needs to be organized for many different analyses.\n",
     "If our example above used unique values that we wanted to keep as we changed chunking, this would have meant that rather than having a single ~19 GiB dataset, we would have needed to keep all three, tripling our storage to almost 60 GiB.\n",
     "Therefore, selecting an appropriate chunk shape is critical when generating widely used datasets."
