--- a/101/WriteChunkedFiles.ipynb
+++ b/101/WriteChunkedFiles.ipynb
@@ -25,7 +25,7 @@
    "id": "9262bf36-4d8b-4b1d-9d7c-6730462cf7a6",
    "metadata": {},
    "source": [
-    "The goal of this notebook is to learn how to load a collection of `netcdf` files, chunk the data, write the data in `zarr` format, and confirm the proper creation of the `zarr` store.\n",
+    "The goal of this notebook is to learn how to load a collection of NetCDF files, chunk the data, write the data in Zarr format, and confirm the proper creation of the Zarr store.\n",
     "We will be writing to our local storage for simplicity (as this is just a tutorial notebook), but you can easily change the output path to be anywhere including cloud storage."
    ]
   },
@@ -49,9 +49,9 @@
    "source": [
     "## Example Dataset\n",
     "\n",
-    "In this notebook, we will use the daily gridMET precipitation dataset as an example for reading data and writing to `zarr`.\n",
-    "The data is currently hosted on the HyTEST OSN as a collection `netcdf` files.\n",
-    "To get the files, we will use [`fsspec`](https://filesystem-spec.readthedocs.io/en/latest/) to open each year of precipitation data to a list.\n",
+    "In this notebook, we will use the daily gridMET precipitation dataset as an example for reading data and writing to Zarr.\n",
+    "The data is currently hosted on the HyTEST OSN as a collection NetCDF files.\n",
+    "To get the files, we will use [fsspec](https://filesystem-spec.readthedocs.io/en/latest/) to open each year of precipitation data to a list.\n",
     "Then, we can read in the all the files at once using [`xarray.open_mfdataset`](https://docs.xarray.dev/en/stable/generated/xarray.open_mfdataset.html)."
    ]
   },
@@ -83,7 +83,7 @@
    "source": [
     "## Selecting Chunk Shape and Size\n",
     "\n",
-    "As we can see in the rich HTML output of our dataset, the netCDF files were already chunked with pattern of `{'day': 61, 'lat': 98, 'lon': 231}`.\n",
+    "As we can see in the rich HTML output of our dataset, the NetCDF files were already chunked with pattern of `{'day': 61, 'lat': 98, 'lon': 231}`.\n",
     "However, the size of these chunks are relatively small and near the lower limit of an acceptable chunk size of 10 MiB.\n",
     "So, it would be better if we could increase our chunk sizes to say 70-110 MiB.\n",
     "To do this, we will simply use multiples of the current chunks as to not completely rechunk the dataset (grouping chunks is way faster than completely changing chunk shape).\n",
@@ -191,7 +191,7 @@
    "id": "1d206001-3e5e-4805-b87a-de0c22bcd7d6",
    "metadata": {},
    "source": [
-    "Now, let's save this data to a `zarr`!"
+    "Now, let's save this data to a Zarr!"
    ]
   },
   {
@@ -207,18 +207,18 @@
    "id": "72ad607c-8491-45ea-bb90-ec7394419dd6",
    "metadata": {},
    "source": [
-    "As discussed in the [Xarray User-guide for reading and writing Zarr](https://docs.xarray.dev/en/stable/user-guide/io.html#specifying-chunks-in-a-zarr-store), chunks are specified to our `zarr` store in one of three ways in the preferential order of:\n",
+    "As discussed in the [Xarray User-guide for reading and writing Zarr](https://docs.xarray.dev/en/stable/user-guide/io.html#specifying-chunks-in-a-zarr-store), chunks are specified to our Zarr store in one of three ways in the preferential order of:\n",
     "\n",
     "  1. Manual chunk sizing through the use of the `encoding` argument\n",
-    "  2. Automatic chunking based on chunks of the `dask` arrays\n",
-    "  3. Default chunk behavior determined by the `zarr` library\n",
+    "  2. Automatic chunking based on chunks of the dask arrays\n",
+    "  3. Default chunk behavior determined by the Zarr library\n",
     "\n",
-    "In our case, we updated the `dask` array chunks by calling `ds.chunk()`.\n",
+    "In our case, we updated the dask array chunks by calling `ds.chunk()`.\n",
     "Therefore, we have the correct chunks and should be good to go.\n",
     "\n",
     "```{tip}\n",
     "This is our preferred method over using the `encoding` argument, as the positional ordering of the chunk shape in the `encoding` argument must match the positional ordering of the dimensions in each array.\n",
-    "If they do not match you can get incorrect chunk shapes in the `zarr` store.\n",
+    "If they do not match you can get incorrect chunk shapes in the Zarr store.\n",
     "\n",
     "If you have multiple variables, using `encoding` could allow for specifying individual chunking shapes for each variable.\n",
     "However, if this is the case, we recommend updating each variable individually using, for example, `ds.precipitation_amount.chunk()` to change the individual variable chunk shape.\n",
@@ -276,7 +276,7 @@
    "source": [
     "## Assessing Compression\n",
     "\n",
-    "Now that our `zarr` store is made, let's check how much the data was compressed.\n",
+    "Now that our Zarr store is made, let's check how much the data was compressed.\n",
     "By default, [Zarr uses the Blosc compressor](https://docs.xarray.dev/en/stable/user-guide/io.html#zarr-compressors-and-filters) when calling [`xarray.Dataset.to_zarr()`](https://docs.xarray.dev/en/stable/generated/xarray.Dataset.to_zarr.html) if we don't specify a compressor in the `encoding`.\n",
     "So, our data should be compressed by default, and we can examine each chunk on disk to confirm their compression factor.\n",
     "\n",
@@ -327,7 +327,7 @@
    "metadata": {},
    "source": [
     "As we can see, the total dataset (excluding coordinates) is only 85 MiB on disk, with chunk sizes varying from 76 KiB to 4.8 MiB.\n",
-    "This size is drastically smaller than the quoted total size for the `xarray` output, which said 2.58 GiB.\n",
+    "This size is drastically smaller than the quoted total size for the xarray output, which said 2.58 GiB.\n",
     "Same for the individual chunks, which were quoted at 73.75 MiB.\n",
     "Let's get an exact comparison and compression ratio for the data we read in."
    ]
@@ -364,8 +364,8 @@
     "\n",
     "## Appending New Chunk\n",
     "\n",
-    "Since this compression is so good, let's go ahead and add another time chunk onto our existing `zarr` store.\n",
-    "This is simple in `xarray`, especially since we are just appending another time chunk.\n",
+    "Since this compression is so good, let's go ahead and add another time chunk onto our existing Zarr store.\n",
+    "This is simple in xarray, especially since we are just appending another time chunk.\n",
     "All we have to do is [add `append_dim` to our `.to_zarr()` call to append to the time dimension](https://docs.xarray.dev/en/stable/user-guide/io.html#modifying-existing-zarr-stores)."
    ]
   },
@@ -438,10 +438,10 @@
     "\n",
     "## Clean Up\n",
     "\n",
-    "So, hopefully now you know the basics of how to create a `zarr` store from some netCDF files and set its chunks' shape.\n",
+    "So, hopefully now you know the basics of how to create a Zarr store from some NetCDF files and set its chunks' shape.\n",
     "The same methods would apply when rechunking a dataset, which we will get into next.\n",
     "\n",
-    "As we don't want to keep this `zarr` on our local machine, let's go ahead and delete it."
+    "As we don't want to keep this Zarr on our local machine, let's go ahead and delete it."
    ]
   },
   {
