--- a/201/CreateVirtualZarr.ipynb
+++ b/201/CreateVirtualZarr.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "The objective of this notebook is to learn how to create a virtual Zarr store for a collection of NetCDF files that together make up a complete data set.\n",
     "To do this, we will use [Kerchunk](https://fsspec.github.io/kerchunk/index.html) and [VirtualiZarr](https://virtualizarr.readthedocs.io/en/stable/index.html).\n",
-    "As these two packages can both create virtual Zarr stores but do it in different ways, we will utilize them both to show how they compare in combination with [Dask](https://www.dask.org/) for parallel execution."
+    "As these two packages can both create virtual Zarr stores but do it in different ways, we will utilize them both to show how they compare in combination with [dask](https://www.dask.org/) for parallel execution."
    ]
   },
   {
