--- a/201/RechunkingwithDask.ipynb
+++ b/201/RechunkingwithDask.ipynb
@@ -7,7 +7,7 @@
     "# Rechunking Larger Datasets with Dask\n",
     "\n",
     "The goal of this notebook is to expand on the rechunking performed in the [Introductory Rechunking tutorial](../101/Rechunking.ipynb).\n",
-    "This notebook will perfrom the same operations, but will work on the **much** larger dataset and involve some parallelization using [Dask](https://www.dask.org/). \n",
+    "This notebook will perfrom the same operations, but will work on the **much** larger dataset and involve some parallelization using [dask](https://www.dask.org/). \n",
     "\n",
     ":::{Warning}\n",
     "You should only run workflows like this tutorial on a cloud or HPC compute node.\n",
@@ -41,7 +41,7 @@
     "Like the [Introductory Rechunking tutorial](../101/Rechunking.ipynb), we will use the data from the National Water Model Retrospective Version 2.1.\n",
     "The full dataset is part of the [AWS Open Data Program](https://aws.amazon.com/opendata/), available via the S3 bucket at: `s3://noaa-nwm-retro-v2-zarr-pds/`.\n",
     "\n",
-    "As this is a `zarr` store, let's read it in with [`xarray.open_dataset()`](https://docs.xarray.dev/en/stable/generated/xarray.open_dataset.html) and `engine='zarr'`."
+    "As this is a Zarr store, let's read it in with [`xarray.open_dataset()`](https://docs.xarray.dev/en/stable/generated/xarray.open_dataset.html) and `engine='zarr'`."
    ]
   },
   {
@@ -215,14 +215,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rechunk with `Rechunker`\n",
+    "## Rechunk with Rechunker\n",
     "\n",
-    "With this plan, we can now ask `rechunker` to re-write the data using the prescribed chunking pattern.\n",
+    "With this plan, we can now ask Rechunker to re-write the data using the prescribed chunking pattern.\n",
     "\n",
     "### Set up output location\n",
     "\n",
     "Unlike with the smaller dataset in our previous rechunking tutorial, we will write this larger dataset to an object store (an S3 'bucket') on the USGS OSN.\n",
-    "So, we need to set that up so that `rechunker` will have a suitable place to write data.\n",
+    "So, we need to set that up so that Rechunker will have a suitable place to write data.\n",
     "\n",
     "First, we need to set up the AWS profile and S3 endpoit."
    ]
@@ -281,7 +281,7 @@
     "### Spin up Dask Cluster\n",
     "\n",
     "Our rechunking operation will be able to work in parallel.\n",
-    "To do that, we will spin up a `dask` cluster to schedule the various workers.\n",
+    "To do that, we will spin up a dask cluster to schedule the various workers.\n",
     "\n",
     "```{note}\n",
     "This cluster will be configured differently depending on where you compute is performed.\n",
@@ -390,7 +390,7 @@
    "source": [
     "## Clean Up\n",
     "\n",
-    "As we don't want to keep this rechunked `zarr`, let's go ahead and delete it.\n",
+    "As we don't want to keep this rechunked Zarr, let's go ahead and delete it.\n",
     "We will also conform with best practices and close our Dask client and cluster."
    ]
   },
